objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actual_Response__c</fullName>
        <formula>NumberOfResponses  /  NumberOfContacts</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Response (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <label>Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clever_Contacts_Type__c</fullName>
        <label>Clever Contacts Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption Conversion</fullName>
                </value>
                <value>
                    <fullName>New Donor Conversion</fullName>
                </value>
                <value>
                    <fullName>Raffle Conversion</fullName>
                </value>
                <value>
                    <fullName>Upgrades</fullName>
                </value>
                <value>
                    <fullName>Re-Activation</fullName>
                </value>
                <value>
                    <fullName>Cat Behaviour Guide</fullName>
                </value>
                <value>
                    <fullName>Happy Dog Guide</fullName>
                </value>
                <value>
                    <fullName>MPW Conversion</fullName>
                </value>
                <value>
                    <fullName>CCD Conversion</fullName>
                </value>
                <value>
                    <fullName>GTGTH Conversion</fullName>
                </value>
                <value>
                    <fullName>Adopt Lead Gen</fullName>
                </value>
                <value>
                    <fullName>AEF</fullName>
                </value>
                <value>
                    <fullName>Competible</fullName>
                </value>
                <value>
                    <fullName>MPW Welcome Calls</fullName>
                </value>
                <value>
                    <fullName>MPW Re-Activation Calls</fullName>
                </value>
                <value>
                    <fullName>GiW Conversion Campaign</fullName>
                </value>
                <value>
                    <fullName>GiW Thank you/Check In Calls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Fundraiser_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Giving_Strategy_Amount__c</fullName>
        <label>Default Giving Strategy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fundraiser_ID__c</fullName>
        <label>Fundraiser ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fundraiser_URL__c</fullName>
        <label>Fundraiser URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fundraiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fundraiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fundraising Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Amount__c</fullName>
        <formula>NULLVALUE(
IF(
    ISPICKVAL(Giving_Strategy__c, &apos;Highest Donation Amount&apos;),  
        Highest_Donation_Amount__c, 
        IF(
            ISPICKVAL(Giving_Strategy__c, &apos;Last Donation Amount&apos;),
                Last_Donation_Amount__c, 
                null
        )
), Default_Giving_Strategy_Amount__c)</formula>
        <label>Giving Strategy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Description_1__c</fullName>
        <label>Giving Strategy Description 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Description_2__c</fullName>
        <label>Giving Strategy Description 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Image_URL_1__c</fullName>
        <label>Giving Strategy Image URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Image_URL_2__c</fullName>
        <label>Giving Strategy Image URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Percentage_1__c</fullName>
        <label>Giving Strategy Percentage 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Percentage_2__c</fullName>
        <label>Giving Strategy Percentage 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Percentage_Amount_1__c</fullName>
        <formula>NULLVALUE(Giving_Strategy_Amount__c, Default_Giving_Strategy_Amount__c) * Giving_Strategy_Percentage_1__c</formula>
        <label>Giving Strategy Percentage Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy_Percentage_Amount_2__c</fullName>
        <formula>NULLVALUE(Giving_Strategy_Amount__c, Default_Giving_Strategy_Amount__c) * Giving_Strategy_Percentage_2__c</formula>
        <label>Giving Strategy Percentage Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving_Strategy__c</fullName>
        <label>Giving Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Highest Donation Amount</fullName>
                </value>
                <value>
                    <fullName>Last Donation Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Donation_Amount__c</fullName>
        <label>Highest Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Amount__c</fullName>
        <label>Last Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Places__c</fullName>
        <label>Maximum Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Places__c</fullName>
        <label>Minimum Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Drive_Folder_Name__c</fullName>
        <formula>Campaign_Code__c + &apos;_dev&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Drive Folder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>pmdm__Program__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Acknowledgement_Template_Name__c</fullName>
        <label>Recurring Acknowledgement Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Schedule</label>
        <referenceTo>pmdm__ServiceSchedule__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Session</label>
        <referenceTo>pmdm__ServiceSession__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Stripe_Account_Id__c</fullName>
        <label>Stripe Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Fundraiser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website Fundraiser</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Campaign</fullName>
        <active>true</active>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_Campaign</fullName>
        <active>true</active>
        <label>Community Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Record used to capture details about an event.</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraiser_Campaign</fullName>
        <active>true</active>
        <label>Fundraiser Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>